styles/base.css
:root {
  --main-color: #b13bff;
}

* {
  box-sizing: border-box;
  margin: 0;
  font-family: "Roboto", sans-serif;
}

body {
  max-width: 700px;
  margin: 0 auto;
}

header {
  background: var(--main-color);
}

#course-title {
  font-size: 1.5rem;
  display: block;
  text-align: center;
  padding: 20px 0;
  color: white;
}

ul {
  height: 40px;
  list-style-type: none;
  display: flex;
  justify-content: space-around;
  align-items: center;
  background: #000;
}

a {
  text-decoration: none;
  color: white;
}

a:hover {
  color: var(--main-color);
  transition: all ease-in-out .3s;
}

h1 {
  text-align: center;
  margin: 10px 0;
}

.about-me {
  background: var(--main-color);
  text-align: center;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
  padding: 10px 0;
  font-weight: 500;
  color: white;
}

main {
  padding: 0;
}

.grid {
  display: grid;
}

.main-content {
  grid-column: 1/3;
  border: 1px solid var(--main-color);
  border-radius: 10px;
}

.grid-items {
  padding: 10px;
}

.profile {
  width: 100px;
  float: right;
  margin-left: 20px;
}

.dominican-flag {
  width: 100px;
  float: left;
  margin-right: 20px;
}

.santiago {
  margin: 0 0 10px 0;
}

footer {
  background: #000;
  color: white;
  text-align: center;
  padding: 10px 0;
  margin-top: 10px;
}

#lastModified {
  margin-top: 10px;
}

